# serializer version: 1
# name: test_setup_platform[botched][button.bathroom_dn-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Bathroom Dn',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.bathroom_dn',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[botched][button.dead_zone-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dead Zone',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.dead_zone',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[botched][button.domestic_hot_water-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Domestic Hot Water',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.domestic_hot_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[botched][button.front_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Front Room',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.front_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[botched][button.kids_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kids Room',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.kids_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[botched][button.kitchen-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.kitchen',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[botched][button.main_bedroom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Main Bedroom',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.main_bedroom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[botched][button.main_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Main Room',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.main_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[botched][button.my_home-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Home',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.my_home',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.bathroom_dn-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Bathroom Dn',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.bathroom_dn',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.dead_zone-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dead Zone',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.dead_zone',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.domestic_hot_water-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Domestic Hot Water',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.domestic_hot_water',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.front_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Front Room',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.front_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.kids_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kids Room',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.kids_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.kitchen-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.kitchen',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.main_bedroom-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Main Bedroom',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.main_bedroom',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.main_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Main Room',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.main_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.my_home-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Home',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.my_home',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[default][button.spare_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Spare Room',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.spare_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h032585][button.my_home-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Home',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.my_home',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h032585][button.thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'THERMOSTAT',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h099625][button.my_home-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Home',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.my_home',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h099625][button.thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'THERMOSTAT',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h099625][button.thermostat_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'THERMOSTAT',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.thermostat_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h139906][button.thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Thermostat',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h139906][button.thermostat_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Thermostat 2',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.thermostat_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h139906][button.vr-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Vr**********',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.vr',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h157546][button.ba-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ba******',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.ba',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h157546][button.ka-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ka*********',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.ka',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h157546][button.ka_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Ka*****',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.ka_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h157546][button.kl-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kl********',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.kl',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h157546][button.sl-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Sl********',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.sl',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[h157546][button.wo-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Wo*******',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.wo',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[minimal][button.main_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Main Room',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.main_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[minimal][button.my_home-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'My Home',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.my_home',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[sys_004][button.living_room-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Living room',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.living_room',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup_platform[sys_004][button.thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Thermostat',
      'status': dict({
      }),
    }),
    'context': <ANY>,
    'entity_id': 'button.thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
